# DidacticalEnigma.Next/Models/ProgramConfiguration.cs
@@ -1,6 +1,8 @@
 namespace DidacticalEnigma.Next.Models;
 
-public class ProgramConfiguration
+public class ProgramConfigurationGetResult
 {
+    public string AboutSection { get; set; }
     
+    public string Version { get; set; }
 }
