# DidacticalEnigma.Next/Models/ProgramConfigurationSetRequest.cs
@@ -1,0 +1,6 @@
+namespace DidacticalEnigma.Next.Models;
+
+public class ProgramConfigurationSetRequest
+{
+    
+}
